Upgraded gradle, java version, Spring Boot too